--- a/Start/main.css
+++ b/Start/main.css
@@ -379,7 +379,6 @@ footer a {
 
 
 @media screen and (min-width: 320px){
-
   .header__logo{
     height: 45px;
     margin: 0.5em 0.3em;
@@ -404,7 +403,7 @@ footer a {
     position: absolute;
     transform: translate(-20.5em, 0);
     transition: transform 0.3s ease;
-    z-index: 999;
+    z-index: 10;
     background-color: white;
 
   }
@@ -420,12 +419,63 @@ footer a {
 }
 
 @media screen and (min-width: 550px){
+  .hero, .top-news, .scores, .weather, .recent-news {
+    order: 10;
+  }
+
   .nav{
+    width: 100%;
+    transform: translate(0, 0);
     position: relative;
+    height: auto;
+    border: 1px saddlebrown;
+    z-index: -1;
+  }
+
+  .nav__list{
+    width: 100%;
+    display: inline-flex;
   }
 
   .nav__list li{
-    display: inline-block;
+    display: inline;
+  }
+
+  .menu-icon-bar{
+    display: none;
+  }
+
+  .content{
+    display: flex;
+    flex-wrap: wrap;
+  } 
+
+  .scores{
+    width: 100%;
   }
   
+  .hero{
+    order: 1;
+    width: 60%;
+  }
+
+  .weather{
+    order: 2;
+    width: 40%;
+  }
+
+  .top-news{
+    width: 100%;
+    height: auto;
+  }
+
+  .header__logo{
+    height: 60px;
+    margin: 1.5em 1.3em;
+  }
+  
+  .header__title{
+    font-size: 2.5em;
+    margin: 1em 0.2em;
+  }
 }
