--- a/Start/main.css
+++ b/Start/main.css
@@ -479,3 +479,39 @@ footer a {
     margin: 1em 0.2em;
   }
 }
+
+@media screen and (min-width: 700px){
+  .header__logo {
+    height: 72px;
+    margin-right: 1em;
+    margin-top: 12px;
+  }
+  
+  .header__title {
+    font-weight: 300;
+    font-size: 4em;
+    margin: 0.5em 0.25em;
+   
+  }
+
+  .hero{
+    order: 1;
+    width: 50%;
+  }
+
+  .top-news{
+    order: 2;
+    width: 50%;
+  }
+
+  .scores{
+    width: 60%;
+    order: 3;
+  }
+  
+  .weather{
+    width: 40%;
+    order: 4;
+  }
+
+}
