--- a/Start/main.css
+++ b/Start/main.css
@@ -515,3 +515,12 @@ footer a {
   }
 
 }
+
+@media screen and (min-width: 850px){
+  main, .header__inner, .nav, .content {
+    width: 850px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+}
